front page done

--- a/front-end/sass/base/_base.scss
+++ b/front-end/sass/base/_base.scss
@@ -1,5 +1,11 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: #F3E9F1;
+    a{
+        text-decoration: none;
+    }
+}
+
+main{
+    margin-bottom: 50px;
 }
