--- a/front-end/sass/base/_typography.scss
+++ b/front-end/sass/base/_typography.scss
@@ -1,16 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap');
 
 *{
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 20px;
+  font-family: 'Montserrat', 'sans-serif';
+  font-size: 18px;
 }
+
 h1{
   font-size: 24px;
-  font-weight: 600;
 }
 
-a {
-  text-decoration: none;
-  color:#000;
+.footer__a a{
+  font-size: 14px;
 }
-
