--- a/front-end/sass/main.scss
+++ b/front-end/sass/main.scss
@@ -4,4 +4,5 @@
 @import "./base/typography";
 @import "./layouts/header";
 @import "./layouts/footer";
-@import "./pages/index"
+@import "./components/product-card";
+@import "./pages/index";
