--- a/front-end/sass/utils/_variables.scss
+++ b/front-end/sass/utils/_variables.scss
@@ -2,7 +2,7 @@ $color-primary: #FFF;
 $color-secondary: darken($color-primary, 20%);
 
 $bkgd-clr: #202020;
-$bkgd-lighter: rgba(236,236,236, 0.4);
+$bkgd-lighter: #F2F2F2;
 
 $tablet-width: 641px;
 $desktop-width: 1025px;
