--- a/front-end/sass/components/_product-card.scss
+++ b/front-end/sass/components/_product-card.scss
@@ -1,66 +1,78 @@
-.list__products{
-    @include tablet{
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-
-    .product{
-        border: 2px solid $bkgd-clr;
-        border-radius: 15px;
-        display: flex;
-        justify-content: center;
-        align-items: stretch;
-        color: $bkgd-clr;
-        background-color: $bkgd-lighter;
-        margin-bottom: 15px;
-        width: 100%;
-        @include tablet{
-            width: 45%;
-            min-width: 400px;
-            margin: 1%;
-        }
-        @include desktop{
-            width: 25%;
-        }
-        &:hover{
-            transition: transform 300ms;
-            transform: scale(1.05);
-        }
+.list__products {
+  @include tablet {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .product {
+    border: 2px solid $bkgd-clr;
+    display: grid;
+    grid-template-areas:
+      "img"
+      "description";
     
-        &__img{
-            object-fit: cover;
-            object-position: center;
-            height: 180px;
-            width: 50%;
-            border-radius: 15px 0 0 15px;
-            border-right: 1px solid $bkgd-clr;
-        }
-        &__description{
-            width: 45%;
-            display: grid;
-            grid-template-rows: 35px 85px 35px;
-            row-gap: 10px;
-            text-align: center;
-            .product__name{
-                place-self: center;
-            }     
-            .product__text{
-                padding: 0 4%;
-                overflow: scroll;
-                justify-self: stretch;
-                &::-webkit-scrollbar{       //cacher la scrollbar//
-                    display: none;
-                }
-            }
-            .product__price{
-                place-self: center;
-            }         
-        }
-        &__anchor{
-           width: 5%;
-           margin: auto;
-           text-align: center;
-        }
+    @include tablet {
+        width: 49%;
+      grid-template-areas:
+        "img description"
+        "img description"
+        "img description";
     }
+    @include desktop{
+        width:19%;
+        grid-template-areas:
+      "img"
+      "description";
+    }
+    row-gap: 1em;
+    color: $bkgd-clr;
+    background-color: whitesmoke;
+    margin-bottom: 15px;
+    &:hover {
+      transition: transform 300ms;
+      transform: scale(1.05);
+    }
+    &__img {
+      box-sizing: border-box;
+      background-color: white;
+      width: 100%;
+      padding: 2.5%;
+      grid-area: img;
+      object-fit: cover;
+      object-position: center;
+      @include tablet {
+          min-width: 140px;
+      }
+    }
+    &__description {
+      grid-area: description;
+      display: grid;
+      text-align: center;
+      align-items: center;
+      grid-template-areas:
+        "title"
+        "text"
+        "price";
+      row-gap: 10%;
+      .product__name {
+        grid-area: title;
+      }
+      .product__text {
+        grid-area: text;
+        height: 40px;
+        padding: 0 5%;
+        overflow: scroll;
+        justify-self: stretch;
+        &::-webkit-scrollbar {
+          //cacher la scrollbar//
+          display: none;
+        }
+      }
+      .product__price {
+        grid-area: price;
+        margin-bottom: 1em;
+        height: 2em;
+      }
+    }
+  }
 }
