--- a/front-end/sass/pages/_index.scss
+++ b/front-end/sass/pages/_index.scss
@@ -4,6 +4,9 @@ main {
     padding-top: 1em;
     padding-bottom: 35px;
     text-align: center;
+    margin-bottom: 1em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
   }
 }
 
