--- a/front-end/styles/style.css
+++ b/front-end/styles/style.css
@@ -17,11 +17,15 @@ main {
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 30px;
 }
 
 .footer__a a {
   font-size: 14px;
+}
+
+h2 {
+  font-size: 24px;
 }
 
 header {
@@ -80,31 +84,29 @@ footer .footer__a a {
 @media (min-width: 641px) {
   .list__products {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
   }
 }
 .list__products .product {
   border: 2px solid #202020;
-  border-radius: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
+  display: grid;
+  grid-template-areas: "img" "description";
+  row-gap: 1em;
   color: #202020;
-  background-color: rgba(236, 236, 236, 0.4);
+  background-color: whitesmoke;
   margin-bottom: 15px;
-  width: 100%;
 }
 @media (min-width: 641px) {
   .list__products .product {
-    width: 45%;
-    min-width: 400px;
-    margin: 1%;
+    width: 49%;
+    grid-template-areas: "img description" "img description" "img description";
   }
 }
 @media (min-width: 1025px) {
   .list__products .product {
-    width: 25%;
+    width: 19%;
+    grid-template-areas: "img" "description";
   }
 }
 .list__products .product:hover {
@@ -112,25 +114,34 @@ footer .footer__a a {
   transform: scale(1.05);
 }
 .list__products .product__img {
+  box-sizing: border-box;
+  background-color: white;
+  width: 100%;
+  padding: 2.5%;
+  grid-area: img;
   object-fit: cover;
   object-position: center;
-  height: 180px;
-  width: 50%;
-  border-radius: 15px 0 0 15px;
-  border-right: 1px solid #202020;
+}
+@media (min-width: 641px) {
+  .list__products .product__img {
+    min-width: 140px;
+  }
 }
 .list__products .product__description {
-  width: 45%;
+  grid-area: description;
   display: grid;
-  grid-template-rows: 35px 85px 35px;
-  row-gap: 10px;
   text-align: center;
+  align-items: center;
+  grid-template-areas: "title" "text" "price";
+  row-gap: 10%;
 }
 .list__products .product__description .product__name {
-  place-self: center;
+  grid-area: title;
 }
 .list__products .product__description .product__text {
-  padding: 0 4%;
+  grid-area: text;
+  height: 40px;
+  padding: 0 5%;
   overflow: scroll;
   justify-self: stretch;
 }
@@ -138,12 +149,9 @@ footer .footer__a a {
   display: none;
 }
 .list__products .product__description .product__price {
-  place-self: center;
-}
-.list__products .product__anchor {
-  width: 5%;
-  margin: auto;
-  text-align: center;
+  grid-area: price;
+  margin-bottom: 1em;
+  height: 2em;
 }
 
 main {
@@ -153,6 +161,9 @@ main .opening {
   padding-top: 1em;
   padding-bottom: 35px;
   text-align: center;
+  margin-bottom: 1em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
 }
 
 .details {
@@ -165,7 +176,7 @@ main .opening {
 }
 @media (min-width: 641px) {
   .details {
-    grid-template-areas: "img img ." "img img title" "img img . " "img img description" "img img ." "img img select" "img img price" "img img ." "img img button" "img img .";
+    grid-template-areas: "img img ." "img img title" "img img . " "img img description" "img img ." "img img select" "img img ." "img img price" "img img button" "img img .";
   }
 }
 .details__img {
@@ -195,10 +206,14 @@ main .opening {
 .details__options {
   grid-area: select;
 }
-.details__options select {
+.details__options .options__select {
+  margin-left: 2em;
   border-color: #202020;
   border-radius: 15px;
   padding: 0 5px;
+}
+.details__options label {
+  padding-right: 2em;
 }
 .details__price {
   grid-area: price;
@@ -211,6 +226,123 @@ main .opening {
   border: none;
   border-radius: 15px;
   padding: 5px;
+}
+
+.basket h2 {
+  padding-bottom: 1em;
+}
+.basket__product {
+  padding: 5%;
+  background-color: whitesmoke;
+  display: grid;
+  grid-template-areas: "img . text" "img . price";
+  column-gap: 15px;
+  text-align: center;
+  align-items: center;
+}
+.basket__productimg {
+  grid-area: img;
+  width: 100%;
+  object-position: center;
+  object-fit: cover;
+}
+.basket__productdetails {
+  grid-area: text;
+}
+.basket__productprice {
+  grid-area: price;
+}
+.basket__price {
+  padding: 1em 0;
+  text-align: right;
+}
+
+.order h2 {
+  padding-bottom: 1em;
+}
+.order form {
+  display: flex;
+  flex-flow: column;
+  text-align: center;
+}
+@media (min-width: 641px) {
+  .order form {
+    text-align: initial;
+  }
+}
+@media (min-width: 641px) {
+  .order form div {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.5em;
+  }
+}
+.order form .required {
+  color: red;
+}
+.order form label {
+  text-align: left;
+  display: inline-block;
+  width: 100%;
+  padding-top: 15px;
+  padding-bottom: 5px;
+}
+@media (min-width: 641px) {
+  .order form label {
+    width: fit-content;
+  }
+}
+.order form input,
+.order form select {
+  margin: 0 auto;
+  width: 300px;
+  box-sizing: border-box;
+  border: 1px solid #202020;
+}
+@media (min-width: 641px) {
+  .order form input,
+.order form select {
+    margin: 0;
+    width: 50%;
+  }
+}
+.order form .form__submit {
+  padding-top: 1em;
+}
+@media (min-width: 641px) {
+  .order form .form__submit {
+    margin: 0 15%;
+  }
+}
+.order form .form__submit input {
+  text-align: center;
+  background-color: #202020;
+  color: white;
+  border-radius: 15px;
+  padding: 5px;
+  border: none;
+}
+@media (min-width: 641px) {
+  .order form .form__submit input {
+    width: 100%;
+  }
+}
+
+@media (min-width: 1025px) {
+  main {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  main .opening {
+    width: 100%;
+  }
+  main .basket {
+    width: 45%;
+  }
+  main .order {
+    width: 45%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
