JS pour page produit fonctionnel - need perfectionnement

--- a/front-end/sass/components/_product-card.scss
+++ b/front-end/sass/components/_product-card.scss
@@ -42,6 +42,7 @@
       object-position: center;
       @include tablet {
           min-width: 140px;
+          height: 250px;
       }
     }
     &__description {
