--- a/front-end/styles/style.css
+++ b/front-end/styles/style.css
@@ -242,7 +242,7 @@ main .opening {
   padding: 5%;
   background-color: whitesmoke;
   display: grid;
-  grid-template-areas: "img . text" "img . price";
+  grid-template-areas: "img . name" "img . text" "img . price";
   column-gap: 15px;
   text-align: center;
   align-items: center;
@@ -252,6 +252,9 @@ main .opening {
   width: 100%;
   object-position: center;
   object-fit: cover;
+}
+.basket__productname {
+  grid-area: name;
 }
 .basket__productdetails {
   grid-area: text;
