Notification nb produits dans panier / somme des prix du panier / favicon

--- a/front-end/sass/main.scss
+++ b/front-end/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./layouts/header";
 @import "./layouts/footer";
 @import "./components/product-card";
+@import "./components/notif-panier";
 @import "./pages/index";
 @import "./pages/product";
 @import "./pages/basket";
