--- a/front-end/styles/style.css
+++ b/front-end/styles/style.css
@@ -52,9 +52,6 @@ header nav .nav__order {
 header nav a {
   color: #FFF;
 }
-header nav a .fas {
-  padding-right: 18px;
-}
 
 footer {
   background-color: #202020;
@@ -155,6 +152,14 @@ footer .footer__a a {
   height: 2em;
 }
 
+#itemsInCart {
+  background-color: red;
+  color: white;
+  border-radius: 50px;
+  padding: 2px 8px;
+  margin-left: 5px;
+}
+
 main {
   padding: 2.5%;
 }
@@ -242,7 +247,7 @@ main .opening {
   padding: 5%;
   background-color: whitesmoke;
   display: grid;
-  grid-template-areas: "img . name" "img . text" "img . price";
+  grid-template-areas: "img  name" "img  text" "img  price";
   column-gap: 15px;
   text-align: center;
   align-items: center;
