--- a/front-end/sass/components/_notif-panier.scss
+++ b/front-end/sass/components/_notif-panier.scss
@@ -1,7 +1,10 @@
 #itemsInCart{
-    background-color: red;
-    color: white;
-    border-radius: 50px;
-    padding: 2px 8px;
-    margin-left: 5px;
+    background-color: rgb(255, 255, 255);
+    color: $bkgd-clr;
+    border-radius: 50%;   
+    display: inline-block;
+    text-align: center;
+    line-height: 26px;
+    width: 26px;
+    font-size: 16px;
 }
