--- a/front-end/styles/style.css
+++ b/front-end/styles/style.css
@@ -153,11 +153,14 @@ footer .footer__a a {
 }
 
 #itemsInCart {
-  background-color: red;
-  color: white;
-  border-radius: 50px;
-  padding: 2px 8px;
-  margin-left: 5px;
+  background-color: white;
+  color: #202020;
+  border-radius: 50%;
+  display: inline-block;
+  text-align: center;
+  line-height: 26px;
+  width: 26px;
+  font-size: 16px;
 }
 
 main {
@@ -251,6 +254,7 @@ main .opening {
   column-gap: 15px;
   text-align: center;
   align-items: center;
+  position: relative;
 }
 .basket__productimg {
   grid-area: img;
@@ -266,6 +270,32 @@ main .opening {
 }
 .basket__productprice {
   grid-area: price;
+}
+.basket__product .basket__removeitem {
+  opacity: 0.5;
+  border: 1px solid #202020;
+  border-radius: 5px;
+  margin: 0;
+  width: 28px;
+  line-height: 26px;
+  display: inline-block;
+  text-align: center;
+  padding: 0;
+  font-weight: bold;
+  background-color: whitesmoke;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+@media (min-width: 1025px) {
+  .basket__product .basket__removeitem {
+    right: 25px;
+    top: 40px;
+  }
+}
+.basket__product .basket__removeitem:hover {
+  opacity: 1;
+  cursor: pointer;
 }
 .basket__price {
   padding: 1em 0;
