--- a/front-end/sass/pages/_basket.scss
+++ b/front-end/sass/pages/_basket.scss
@@ -3,6 +3,7 @@
     padding-bottom: 1em;
   }
   &__product {
+    margin-bottom: 30px;
     padding: 5%;
     background-color: whitesmoke;
     display: grid;
@@ -14,6 +15,10 @@
     text-align: center;
     align-items: center;
     position: relative;
+    box-shadow: 5px 5px 10px 0px #656565;
+    .nodisplay{
+      display: none;
+    }
     &img {
       grid-area: img;
       width: 100%;
@@ -24,18 +29,20 @@
       grid-area: name;
     }
     &details {
+      max-width: 130px;
       grid-area: text;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     &price {
       grid-area: price;
     }
     .basket__removeitem{
       opacity: 0.5;
-      border: 1px solid $bkgd-clr;
-      border-radius: 5px;
+      border: none;
       margin: 0;
-      width: 28px;
-      line-height: 26px;
+      width: 18px;
+      line-height: 16px;
       display: inline-block;
       text-align: center;
       padding: 0;
@@ -44,9 +51,10 @@
       position: absolute;
       right: 10px;
       top: 10px;
+      transition: opacity 150ms ease-in;
       @include desktop{
-      right: 25px;
-      top: 40px;
+      right: 10px;
+      top: 10px;
       }
       &:hover{
         opacity: 1;
@@ -54,10 +62,33 @@
       }
     }
   }
-  &__price {
+  &__under{
     padding: 1em 0;
+    display: flex;
+    flex-direction: column;
     text-align: right;
+    @include tablet {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    button{
+      width: 50%;
+      align-self: center;
+      opacity: 0.5;
+      padding: 0 1em;
+      margin-bottom: 1em;
+      border: 1px solid $bkgd-clr;
+      font-weight: 600;
+      transition: opacity 150ms ease-in;
+      @include tablet{
+        margin-bottom: 0;
+      }
+      &:hover{
+        opacity: 1;
+      }
+    }
   }
+
 }
 
 .order {
@@ -138,4 +169,9 @@
       width: 45%;
     }
   }
+}
+
+#basketempty{
+  text-align: center;
+  margin-top: 1em;
 }
