--- a/front-end/sass/pages/_basket.scss
+++ b/front-end/sass/pages/_basket.scss
@@ -125,6 +125,7 @@
     }
     input,
     select {
+      padding-left: 5px;
       margin: 0 auto;
       width: 300px;
       box-sizing: border-box;
