--- a/front-end/sass/pages/_product.scss
+++ b/front-end/sass/pages/_product.scss
@@ -1,4 +1,5 @@
 .details {
+  box-shadow: 5px 5px 10px 0px #656565;
   display: grid;
   border: 2px solid $bkgd-clr;
   padding: 5px;
@@ -32,7 +33,7 @@
     width: 100%;
     object-fit: cover;
     object-position: center;
-    box-shadow: 0 2px 3px $bkgd-clr;
+    box-shadow: 5px 5px 10px 0px #656565;
     @include tablet {
       height: 60vh;
       max-width: 40vw;
