--- a/front-end/styles/style.css
+++ b/front-end/styles/style.css
@@ -86,6 +86,7 @@ footer .footer__a a {
   }
 }
 .list__products .product {
+  box-shadow: 5px 5px 10px 0px #656565;
   border: 2px solid #202020;
   display: grid;
   grid-template-areas: "img" "description";
@@ -176,6 +177,7 @@ main .opening {
 }
 
 .details {
+  box-shadow: 5px 5px 10px 0px #656565;
   display: grid;
   border: 2px solid #202020;
   padding: 5px;
@@ -193,7 +195,7 @@ main .opening {
   width: 100%;
   object-fit: cover;
   object-position: center;
-  box-shadow: 0 2px 3px #202020;
+  box-shadow: 5px 5px 10px 0px #656565;
 }
 @media (min-width: 641px) {
   .details__img {
@@ -373,6 +375,7 @@ main .opening {
 }
 .order form input,
 .order form select {
+  padding-left: 5px;
   margin: 0 auto;
   width: 300px;
   box-sizing: border-box;
