--- a/front-end/sass/pages/_basket.scss
+++ b/front-end/sass/pages/_basket.scss
@@ -141,14 +141,23 @@
       }
       padding-top: 1em;
       input {
+        opacity: 0.8;
         text-align: center;
         background-color: $bkgd-clr;
         color: white;
         border-radius: 15px;
         padding: 5px;
         border: none;
+        transition: opacity 100ms ease-in;
         @include tablet {
           width: 100%;
+        }
+        &:hover{
+          opacity: 1;
+          cursor: pointer;
+        }
+        &:active{
+          transform: scale(0.9);
         }
       }
     }
