--- a/front-end/sass/pages/_index.scss
+++ b/front-end/sass/pages/_index.scss
@@ -8,5 +8,11 @@ main {
     margin-left: 0.5em;
     margin-right: 0.5em;
   }
+  .serverIsDown{
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    display: none;
+  }
 }
 
